### V1.0: #### ...VICE CITY STYLE... 1. Icon directives are working 2. rough styling is done. site in daily use by me 3. credit to darksky is correctly being displayed 4. Identified a pesky bug that made text transformations blur briefly in webkit browsers; http://stackoverflow.com/questions/37856596/text-is-blurred-when-has-transform-translate-and-it-is-adjacent-to-another-elem   1. Known issue with hardware acceleration and can't be fixed if you use the 'transform' css property *shakes fist angrily*

--- a/css/animation.css
+++ b/css/animation.css
@@ -1,15 +1,17 @@
 .view-animate-container {
-  position:relative;
-  overflow:hidden;
+    position: relative;
+    overflow: hidden;
 }
+
 .view-animate {
-  padding:10px;
+    padding: 0px;
 }
 
 .view-animate.ng-enter {
-  transition:0.5s linear all;
-  opacity:0;
+    transition: 0.5s linear all;
+    opacity: 0;
 }
+
 .view-animate.ng-enter.ng-enter-active {
-  opacity:1;
+    opacity: 1;
 }
